@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.526 2005/12/11 21:24:44 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.527 2005/12/11 21:55:14 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -15,6 +15,7 @@
 
   11 Dec 2005; Preston Cody <codeman@gentoo.org>
   added initial glossary and gimli diagram to the docs directory.
+  modify gli-dialog to allow editing of the install_profile after loading XML.
   
   8 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/html/webgli/:
